# d8demo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: background.md  d8-background.md
examples/: flow_demo.py  run_demo.py
src/d8demo/: __init__.py  accumulation.py  dem.py  flow.py  plot.py  routing.py
tests/: test_accumulation.py  test_dem.py  test_example.py  test_flow.py  test_plot.py  test_routing.py
