[project]
name = "d8demo"
version = "0.1.0"
description = "A tiny educational demo package illustrating D8 flow routing and flow accumulation on synthetic DEMs."
readme = "README.md"
authors = [
    { name = "Sam A. Scivier", email = "samscivier@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
